--- a/examples/production/k8s/stepflow/server/deployment.yaml
+++ b/examples/production/k8s/stepflow/server/deployment.yaml
@@ -35,6 +35,8 @@ spec:
       - name: stepflow-server
         image: ghcr.io/stepflow-ai/stepflow/stepflow-server:alpine-0.9.0
         imagePullPolicy: IfNotPresent
+        args:
+        - "--config=/app/config/stepflow-config.yml"
         ports:
         - name: http
           containerPort: 7840
