chore: More updates needed for opensearch and docling

--- a/docker/langflow-component-server/Dockerfile
+++ b/docker/langflow-component-server/Dockerfile
@@ -16,11 +16,10 @@
 # Provides HTTP-based component execution for Stepflow workflows
 # Build context: repository root (stepflow/)
 #
-# Uses langflowai/langflow:latest as base - Langflow is fast-moving and we need
-# frequent testing against latest stable for our integration points.
+# Uses langflowai/langflow:1.7.1 as base to match project dependencies
 
 # Stage 1: Dependency installation (cached layer)
-FROM langflowai/langflow:latest AS deps
+FROM langflowai/langflow:1.7.1 AS deps
 
 WORKDIR /app
 
@@ -66,8 +65,8 @@ COPY integrations/langflow /tmp/stepflow-langflow
 # Install stepflow-py from local copy with HTTP support (no deps - already installed)
 RUN uv pip install --python /app/.venv/bin/python --no-deps /tmp/stepflow-py[http]
 
-# Install lfx-nightly (required by langflow components)
-RUN uv pip install --python /app/.venv/bin/python "lfx-nightly==0.1.12.dev39"
+# Install lfx (required by langflow components)
+RUN uv pip install --python /app/.venv/bin/python "lfx==0.2.1"
 
 # Install langflow integration (skip deps - already installed above)
 RUN uv pip install --python /app/.venv/bin/python --no-deps /tmp/stepflow-langflow
