fix: Update index mode to jvector

--- a/examples/production/k8s/ingestion_flow.yaml
+++ b/examples/production/k8s/ingestion_flow.yaml
@@ -5591,7 +5591,7 @@ steps:
       index_name:
         $literal: "stepflow-documents"
       engine:
-        $literal: "faiss"
+        $literal: "jvector"
   mustExecute: true
   metadata: {}
 output:
