chore: Updates and tweaks for getting latest openrag ingestion flow working on k8s example architecture (#577)
* fix: update dependency name in docker, startpoint in components

* chore: Updates for stepflow-docling worker integration, latest round of API changes

* chore: More updates needed for opensearch and docling

* fix: Update index mode to jvector

* fix: Metrics and o12y fixes and tweaks

* feat: Add script to run the workflow a couple of different ways

* fix: Trace propagation through docling and workers

* feat: Add script scraping and uploading PDFs

* fix: Add ignores for dynamic content directory, license headers for test scripts

* fix: update to git ignore, security rev on rust library

* fix: formatting errors in python check

* chore: Tweaks to deployment parameters to land on optimal configuration for docling throughput

* doc: Update README to reflect latest architecture and deployment

* fix: Load order issue with dependencies btwn OSX and ubuntu on gh actions that was causing an error initialising

--- a/examples/production/k8s/stepflow/langflow-worker/deployment.yaml
+++ b/examples/production/k8s/stepflow/langflow-worker/deployment.yaml
@@ -21,7 +21,7 @@ metadata:
     app: langflow-worker
     component: langflow-integration
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: langflow-worker
@@ -111,6 +111,9 @@ spec:
               name: stepflow-secrets
               key: opensearch-password
               optional: true
+        # OpenSearch connection pool - increase for parallel workloads
+        - name: OPENSEARCH_MAX_CONNECTIONS
+          value: "20"
         # Docling document processing service
         - name: DOCLING_SERVE_URL
           value: "http://docling-serve.stepflow.svc.cluster.local:5001"
@@ -135,3 +138,12 @@ spec:
           value: "deployment.environment=kubernetes,service.namespace=stepflow"
         - name: OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED
           value: "true"
+        # Workflow configuration variables (for SecretInput components)
+        - name: CONNECTOR_TYPE
+          value: "wikipedia"
+        - name: OWNER
+          value: "stepflow-demo"
+        - name: OWNER_NAME
+          value: "Stepflow Demo"
+        - name: OWNER_EMAIL
+          value: "demo@stepflow.ai"
