--- a/stepflow-rs/crates/stepflow-load-balancer/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-load-balancer/Cargo.toml
@@ -9,13 +9,13 @@ repository.workspace = true
 
 [dependencies]
 # Pingora HTTP proxy framework
-pingora = { version = "0.6", features = ["proxy"] }
-pingora-core = "0.6"
-pingora-http = "0.6"
-pingora-proxy = "0.6"
+pingora.workspace = true
+pingora-core.workspace = true
+pingora-http.workspace = true
+pingora-proxy.workspace = true
 
 # Metrics
-prometheus = "0.13"
+prometheus.workspace = true
 
 # Async runtime
 async-trait.workspace = true
@@ -36,9 +36,9 @@ serde_json.workspace = true
 reqwest.workspace = true
 
 # Utilities
-anyhow = "1.0"
-arc-swap = "1.7"
-itertools = "0.14"
+arc-swap.workspace = true
+anyhow.workspace = true
+itertools.workspace = true
 
 [lints]
 workspace = true
