--- a/sdks/python/stepflow-py/pyproject.toml
+++ b/sdks/python/stepflow-py/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "opentelemetry-api>=1.20.0",
     "opentelemetry-sdk>=1.20.0",
     "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
+    "httpx>=0.25.0",  # HTTP client for blob API
     # API client dependencies (pydantic models, async HTTP)
     "pydantic>=2",
     "aiohttp>=3.9.0",
