refactor: Remove SSE blob methods and use HTTP-only blob API
- Remove blob_store and blob_get from SSE bidirectional protocol
- Delete blob_handlers.rs and blobs.rs protocol files
- Update Python SDK context to use HTTP-only for blob operations
- Add background HTTP server startup in CLI for blob API access
- Update Python tests with mock blob API endpoints
- Update documentation to reflect HTTP-only blob access

Workers now access blob storage via HTTP API at /api/v1/blobs instead
of through the SSE channel, improving scalability and simplifying the
protocol.

--- a/stepflow-rs/crates/stepflow-cli/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-cli/Cargo.toml
@@ -16,6 +16,7 @@ doctest = false
 workspace = true
 
 [dependencies]
+axum.workspace = true
 clap.workspace = true
 error-stack.workspace = true
 rustyline.workspace = true
