feat: Add Blob HTTP API for scalable blob storage (#600)
* feat: Add Blob HTTP API for scalable blob storage

Introduces a standalone Blob HTTP API that workers can access directly,
removing the need to route blob operations through the SSE bidirectional
protocol. This makes blob storage more scalable for distributed deployments.

Key changes:
- Add HTTP endpoints: POST /api/v1/blobs, GET /api/v1/blobs/{id}
- Add blobApi configuration (enabled, url) for deployment flexibility
- Add RuntimeCapabilities to pass blob API URL to workers during init
- Update Python SDK to use HTTP API when URL is configured (SSE fallback)
- Regenerate all schemas (OpenAPI, protocol, config)

Deployment options:
- Local dev: Orchestrator serves blobs by default (no config needed)
- K8s with orchestrator blobs: Set blobApi.url to orchestrator service
- K8s with separate blob service: Set blobApi.enabled=false and blobApi.url

Closes #581

* refactor: Remove SSE blob methods and use HTTP-only blob API

- Remove blob_store and blob_get from SSE bidirectional protocol
- Delete blob_handlers.rs and blobs.rs protocol files
- Update Python SDK context to use HTTP-only for blob operations
- Add background HTTP server startup in CLI for blob API access
- Update Python tests with mock blob API endpoints
- Update documentation to reflect HTTP-only blob access

Workers now access blob storage via HTTP API at /api/v1/blobs instead
of through the SSE channel, improving scalability and simplifying the
protocol.

* fix: Address PR review feedback for Blob HTTP API

- Update documentation to clarify blobApi.url should include /blobs path
- Add 500 error responses to OpenAPI annotations for blob endpoints
- Add aclose() method and async context manager to StepflowContext
- Add ToSchema derives to ErrorResponse and ErrorStackEntry for OpenAPI
- Regenerate schemas

* perf: Share HTTP client across requests for blob operations

Instead of creating a new httpx.AsyncClient per request, share a single
client at 

--- a/schemas/stepflow-config.json
+++ b/schemas/stepflow-config.json
@@ -39,6 +39,10 @@
         "recovery": {
           "$ref": "#/$defs/RecoveryConfig",
           "description": "Recovery configuration for handling interrupted runs."
+        },
+        "blobApi": {
+          "$ref": "#/$defs/BlobApiConfig",
+          "description": "Blob API configuration.\nControls whether the orchestrator serves blob endpoints and the URL workers use."
         }
       }
     }
@@ -161,6 +165,25 @@
           "description": "Maximum number of orphaned runs to claim per check interval.\n\nLimits how many runs are claimed in each periodic check to avoid\noverwhelming a single orchestrator. Default: 10.",
           "default": 10,
           "minimum": 0
+        }
+      }
+    },
+    "BlobApiConfig": {
+      "type": "object",
+      "description": "Configuration for the Blob HTTP API.\n\nThis controls whether the orchestrator serves blob API endpoints and what URL\nworkers should use to access the blob API.",
+      "properties": {
+        "enabled": {
+          "type": "boolean",
+          "description": "Whether the orchestrator serves blob API endpoints.\n\nSet to `false` when running a separate blob service.\nDefault: `true`",
+          "default": true
+        },
+        "url": {
+          "type": [
+            "string",
+            "null"
+          ],
+          "description": "URL workers use to access the blob API.\n\nIf not set, defaults to `http://localhost:{port}/api/v1/blobs` where `{port}`\nis the server's bound port.\n\nThis value should be the base blobs endpoint URL. Workers will:\n- `POST {url}` to create blobs\n- `GET {url}/{blob_id}` to fetch blobs\n\nExamples:\n- Local dev: omit (auto-detected)\n- K8s with orchestrator blobs: `http://orchestrator-service/api/v1/blobs`\n- K8s with separate blob service: `http://blob-service/api/v1/blobs`",
+          "default": null
         }
       }
     },
