refactor: Refine LeaseManager trait and add orchestrator tracking for distributed recovery
Prepare the LeaseManager trait and recovery system for distributed
backends like etcd:

LeaseManager trait changes:
- Remove dead orphan methods (list_orphaned_runs, claim_orphaned_runs)
- Add TTL parameter to heartbeat()
- Add release_all() for graceful shutdown (single RPC for etcd)
- Move claim_for_recovery logic to recovery module
- Add ownership-checking contention semantics to NoOp impl
- Add contention compliance tests (OwnedBy, NotOwner scenarios)

Orchestrator tracking on run records:
- Add orchestrator_id to RunSummary, RunFilters, CreateRunParams
- Add update_run_orchestrator() and orphan_runs_by_stale_orchestrators()
  to MetadataStore trait with InMemory and SQLite implementations
- SQLite migration 004 adds indexed orchestrator_id column

Recovery improvements:
- Targeted recovery queries by orchestrator_id (scales per-orchestrator,
  not total system)
- Lease acquisition before journal replay
- Self-healing: OwnedBy responses correct stale metadata, tolerating
  inaccurate live orchestrator sets
- Wire release_all into graceful shutdown

--- a/stepflow-rs/crates/stepflow-execution/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-execution/Cargo.toml
@@ -17,6 +17,7 @@ doctest = false
 
 [dependencies]
 bit-set.workspace = true
+bytes.workspace = true
 error-stack.workspace = true
 futures.workspace = true
 log.workspace = true
